--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Hello World</title>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css"
+    <title>Hello World</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
+    <link rel="stylesheet" href="style.css"
   </head>
   <body>
-    <h2>This is a title</h2>
-    <p>This is text</p>
-    </body>
+    <img src="images/Hickok Belt Loop Sign.jpg" alt="HBL banner">
+      <nav>
+        <div class="wrapper">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contacts.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="wrapper">
+        <h1>Front Page</h1>
+
+      </div>
+  </body>
 </html>
